2004-02-21  Mike Kestner  <mkestner@ximian.com>

	* pango/Pango.metadata : mark some out params on ParseMarkup.
	* pango/pango-api.xml : regen

2004-02-20  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide NoExpose, Client, Setting, WindowState, 
	and Proximity events.
	* gdk/EventClient.cs : glue-based manual implementation.
	* gdk/EventClient.custom : kill
	* gdk/EventNoExpose.custom : kill
	* gdk/EventProximity.cs : glue-based manual implementation.
	* gdk/EventProximity.custom : kill
	* gdk/EventSetting.cs : glue-based manual implementation.
	* gdk/EventSetting.custom : kill
	* gdk/EventWindowState.cs : glue-based manual implementation.
	* gdk/EventWindowState.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mappings.
	* glue/event.cs : expose event struct fields.
	* gtk/Application.cs : simplify CurrentEvent prop.

2004-02-20  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide Property, Selection, and DND events
	* gdk/EventDND.cs : glue-based manual implementation.
	* gdk/EventDND.custom : kill
	* gdk/EventProperty.cs : glue-based manual implementation.
	* gdk/EventProperty.custom : kill
	* gdk/EventSelection.cs : glue-based manual implementation.
	* gdk/EventSelection.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mappings.
	* glue/event.cs : expose DND, Property and Selection struct fields.

2004-02-19  Thiago Milczarek Sayão  <sayao@brturbo.com>

	* gtk/TextBuffer.custom : new InsertWithTags method.

2004-02-18  Mike Kestner  <mkestner@ximian.com>

	* gdk/Gdk.metadata : hide EventFocus and EventConfigure. 
	* gdk/EventConfigure.cs : glue-based manual implementation.
	* gdk/EventConfigure.custom : kill
	* gdk/EventFocus.cs : glue-based manual implementation.
	* gdk/EventFocus.custom : kill
	* gdk/gdk-api.xml : regen
	* gdk/gdk-symbols.xml : manual mappings.
	* glue/event.cs : expose Focus and Configure struct fields.
	* sample/Scribble.cs : fix EventConfigure api breakage
