@@ -4,9 +4,11 @@
   <attr path="/api/namespace/class[@cname='PangoGlobal']/method[@name='ParseMarkup']/*/*[@name='text']" name="pass_as">out</attr>
   <attr path="/api/namespace/class[@cname='PangoGlobal']/method[@name='ParseMarkup']/*/*[@name='accel_char']" name="pass_as">out</attr>
   <attr path="/api/namespace/class[@cname='PangoGlobal']/method[@name='ReorderItems']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='PangoLayout']/method[@name='GetCursorPos']/*/*[@type='PangoRectangle*']" name="pass_as">out</attr>
   <attr path="/api/namespace/object[@cname='PangoLayout']/method[@name='GetLines']/return-type" name="element_type">Pango.LayoutLine</attr>
   <attr path="/api/namespace/object[@cname='PangoLayout']/method[@name='GetPixelSize']/*/*[@type='int*']" name="pass_as">out</attr>
   <attr path="/api/namespace/object[@cname='PangoLayout']/method[@name='GetSize']/*/*[@type='int*']" name="pass_as">out</attr>
+  <attr path="/api/namespace/object[@cname='PangoLayout']/method[@name='IndexToPos']/*/*[@type='PangoRectangle*']" name="pass_as">out</attr>
   <attr path="/api/namespace/struct[@cname='PangoLayoutLine']/method[@name='GetExtents']/*/*[@type='PangoRectangle*']" name="pass_as">ref</attr>
   <attr path="/api/namespace/struct[@cname='PangoLayoutLine']/method[@name='GetExtents']/*/*[@type='PangoRectangle*']" name="null_ok">1</attr>
   <attr path="/api/namespace/struct[@cname='PangoLayoutLine']/method[@name='GetPixelExtents']/*/*[@type='PangoRectangle*']" name="pass_as">ref</attr>
