@@ -323,8 +323,8 @@
         <return-type type="void" />
         <parameters>
           <parameter type="int" name="index_" />
-          <parameter type="PangoRectangle*" name="strong_pos" />
-          <parameter type="PangoRectangle*" name="weak_pos" />
+          <parameter type="PangoRectangle*" name="strong_pos" pass_as="out" />
+          <parameter type="PangoRectangle*" name="weak_pos" pass_as="out" />
         </parameters>
       </method>
       <method name="GetExtents" cname="pango_layout_get_extents">
@@ -408,7 +408,7 @@
         <return-type type="void" />
         <parameters>
           <parameter type="int" name="index_" />
-          <parameter type="PangoRectangle*" name="pos" />
+          <parameter type="PangoRectangle*" name="pos" pass_as="out" />
         </parameters>
       </method>
       <method name="MoveCursorVisually" cname="pango_layout_move_cursor_visually">
