@@ -1,7 +1,14 @@
 2004-02-21  Mike Kestner  <mkestner@ximian.com>
 
+	* pango/Pango.metadata : mark some out params on Layout.
+	* pango/pango-api.xml : regen
+	[fixes #54696]
+
+2004-02-21  Mike Kestner  <mkestner@ximian.com>
+
 	* pango/Pango.metadata : mark some out params on ParseMarkup.
 	* pango/pango-api.xml : regen
+	[fixes #54695]
 
 2004-02-20  Mike Kestner  <mkestner@ximian.com>
 
